# Notes

C++/: cmake学习与实践.md
C++/cmake_demo/: CMakeLists.txt  TutorialConfig.h.in  tutorial.cxx
C++/cmake_demo/MathFunctions/: CMakeLists.txt  mysqrt.cxx
Front-End/: CSS笔记.md  JavaScript笔记.md  demo.html  demo.js
MachineLearning/: 百面机器学习--学习笔记.md
Spark/: Spark学习和使用笔记.md
